--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>AutoWash - Car Wash Website Template</title>
+        <title>MD Car Care</title>
+        <meta name="description" content="MD Car Care | The Best Car Repair and Service Center in Coimbatore. Best General Car Service. Car Repair. Car Tinkering and Painting. Car Workshop. Car Bodyshop. Car Oil Services. Car Mechanic. Car Cleaning and Car Wash.">
+
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Free Website Template" name="keywords">
         <meta content="Free Website Template" name="description">
@@ -101,7 +103,7 @@
                             <a href="#contact" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="ml-auto">
-                            <a class="btn btn-custom" href="#contact">Get Appointment</a>
+                            <a class="btn btn-custom" href="https://wa.me/919629052227" target="blank">Get Appointment</a>
                         </div>
                     </div>
                 </nav>
@@ -119,12 +121,12 @@
                             <img src="img/banner-1.png" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h3>Washing & Detailing</h3>
-                            <h1>Keep your Car Newer</h1>
+                            <h3>Powered by MD Car Care</h3>
+                            <h1> General checkup</h1>
                             <p>
-                                Make your car cleanest. finest and more comfortable
+                                Take a moment to take care of your car with our inspection service and engine scanning for free of cost at your first visit.
                             </p>
-                            <a class="btn btn-custom" href="">Explore More</a>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -135,9 +137,9 @@
                             <h3>Washing & Detailing</h3>
                             <h1>Quality service for you</h1>
                             <p>
-                                Don't wait, let's start the journey!!
+                                Happiness is driving your car after a car wash.
                             </p>
-                            <a class="btn btn-custom" href="">Explore More</a>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -148,9 +150,9 @@
                             <h3>Washing & Detailing</h3>
                             <h1>Exterior & Interior Washing</h1>
                             <p>
-                                Get a classy and shining outfit for your car
+                                Our cleaning, booster, and wax will bring your car new life
                             </p>
-                            <a class="btn btn-custom" href="">Explore More</a>
+                            <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
                     </div>
                 </div>
@@ -167,7 +169,7 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-car-wash-1"></i>
+                                    <img src="/img/carwashing.png" width="100px" />
                                     <h3>Car washing</h3>
                                     <p>We clean your car so well you'll need sunglasses to see your car shine as newer one
                                     </p>
@@ -175,7 +177,7 @@
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-car-wash"></i>
+                                    <img src="/img/oilservice.png" width="100px" />
                                     <h3>Oil Service</h3>
                                     <p>Servicing your engine on time is key to a healthy car.  Get your trusted oil services with us.
                                     </p>
@@ -183,42 +185,42 @@
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-vacuum-cleaner"></i>
+                                    <img src="/img/oilservice.png" width="100px" />
                                     <h3>Wheel alignment</h3>
                                     <p>A wheel alignment will reduce tire wear, fuel consumption and ensure you having a smoother journey </p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-seat"></i>
+                                    <img src="/img/carpainting.png" width="100px" />
                                     <h3>Tinkering & Painting</h3>
                                     <p>We are sure that you will Comment on your car just like a WOW with our sculpture with our work.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-car-service"></i>
+                                    <img src="/img/enginescanning.png" width="100px" />
                                     <h3>Engine Scanning</h3>
                                     <p>We must need a Healthy Enginee for our Car to have a Safty and riskless journey.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-car-service-2"></i>
+                                    <img src="/img/bodyshining.png" width="100px" />
                                     <h3>Body Shining</h3>
                                     <p>Get a classy and shining outfit for your car with us at the most affordable price.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-car-wash"></i>
+                                    <img src="/img/airconditioning.png" width="100px" />
                                     <h3>Air Conditioning</h3>
                                     <p>Make you're every ride positive with the cool breeze and in a relaxed mindset.</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6">
                                 <div class="service-item">
-                                    <i class="flaticon-brush-1"></i>
+                                    <img src="/img/interiorcleaning.png" width="100px" />
                                     <h3>Interior Cleaning</h3>
                                     <p>Make your car cleanest. finest and more comfortable with our interior cleaning services.</p>
                                 </div>
@@ -421,7 +423,7 @@
                                 </div>
                                 <div class="contact-info-text">
                                     <h3>Call Us</h3>
-                                    <p>+012 345 6789</p>
+                                    <p>+91 96290 52227</p>
                                 </div>
                             </div>
                             <div class="contact-info-item">
@@ -430,7 +432,7 @@
                                 </div>
                                 <div class="contact-info-text">
                                     <h3>Email Us</h3>
-                                    <p>info@example.com</p>
+                                    <p>mdcarcare.in@gmail.com</p>
                                 </div>
                             </div>
                         </div>
@@ -531,7 +533,7 @@
         <div id="loader" class="show">
             <div class="loader"></div>
         </div>
-
+        
         <!-- JavaScript Libraries -->
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
