--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
                             <img src="img/banner-1.png" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h3>Powered by MD Car Care</h3>
                             <h1> General checkup</h1>
                             <p>
                                 Take a moment to take care of your car with our inspection service and engine scanning for free of cost at your first visit.
@@ -134,7 +133,6 @@
                             <img src="img/banner-2.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h3>Washing & Detailing</h3>
                             <h1>Quality service for you</h1>
                             <p>
                                 Happiness is driving your car after a car wash.
@@ -147,10 +145,9 @@
                             <img src="img/banner-3.jpg" alt="Image">
                         </div>
                         <div class="carousel-text">
-                            <h3>Washing & Detailing</h3>
                             <h1>Exterior & Interior Washing</h1>
                             <p>
-                                Our cleaning, booster, and wax will bring your car new life
+                                Our cleaning, booster, and wax will bring your car a new life
                             </p>
                             <a class="btn btn-custom" href="#contact">Explore More</a>
                         </div>
@@ -236,7 +233,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <div class="about-img">
-                            <img src="img/about.jpg" alt="Image">
+                            <img src="img/aboutus.jpg" alt="Image">
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -246,12 +243,12 @@
                         </div>
                         <div class="about-content">
                             <p>
-                                The best car repair, and service Center at Kavundampalayam, Coimbatore, where we aim to empower our best services to our lovely customers for a steady, stunning, and safe trip.
+                                The Best Car Repair, and Service Center at Kavundampalayam, Coimbatore, where we aim to empower our best services to our lovely customers for a steady, stunning, and safe trip.
                             </p>
                             <ul>
-                                <li><i class="far fa-check-circle"></i>Car washing</li>
+                                <li><i class="far fa-check-circle"></i>Car Washing</li>
                                 <li><i class="far fa-check-circle"></i>Oil Service</li>
-                                <li><i class="far fa-check-circle"></i>Wheel alignment</li>
+                                <li><i class="far fa-check-circle"></i>Wheel Alignment</li>
                                 <li><i class="far fa-check-circle"></i>Tinkering & Painting</li>
                                 <li><i class="far fa-check-circle"></i>Interior Cleaning</li>
                                 <li><i class="far fa-check-circle"></i>Engine Scanning</li>
