--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta name="description" content="MD Car Care | The Best Car Repair and Service Center in Coimbatore. Best General Car Service. Car Repair. Car Tinkering and Painting. Car Workshop. Car Bodyshop. Car Oil Services. Car Mechanic. Car Cleaning and Car Wash.">
 
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <meta content="Free Website Template" name="keywords">
-        <meta content="Free Website Template" name="description">
 
         <!-- Favicon -->
         <link href="img/favicon.ico" rel="icon">
@@ -64,7 +62,8 @@
                                     </div>
                                     <div class="top-bar-text">
                                         <h3>Call Us</h3>
-                                        <p>+91 96290 52227</p>
+                                        <p>+91 9629152227</p>
+                                        <p>+91 9629752227</p>
                                     </div>
                                 </div>
                             </div>
@@ -74,7 +73,7 @@
                                         <i class="far fa-envelope"></i>
                                     </div>
                                     <div class="top-bar-text">
-                                        <h3>Email Us</h3>
+                                        <h3>Mail Us</h3>
                                         <p>mdcarcare.in@gmail.com </p>
                                     </div>
                                 </div>
@@ -156,112 +155,112 @@
             </div>
         </div>
         <!-- Carousel End -->
-                <!-- Service Start -->
-                <div class="service" id="service">
+                <!-- About Start -->
+                <div class="about" id="about">
                     <div class="container">
-                        <div class="section-header text-center">
-                            <p>What We Do?</p>
-                            <h2>Premium Car Services</h2>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/carwashing.png" width="100px" />
-                                    <h3>Car washing</h3>
-                                    <p>We clean your car so well you'll need sunglasses to see your car shine as newer one
+                        <div class="row align-items-center">
+                            <div class="col-lg-6">
+                                <div class="about-img">
+                                    <img src="img/aboutus.jpg" alt="Image">
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="section-header text-left">
+                                    <p>About Us</p>
+                                    <h2>MD Care Care</h2>
+                                </div>
+                                <div class="about-content">
+                                    <p>
+                                        The Best Car Repair, and Service Center at Kavundampalayam, Coimbatore, where we aim to empower our best services to our lovely customers for a steady, stunning, and safe trip.
                                     </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/oilservice.png" width="100px" />
-                                    <h3>Oil Service</h3>
-                                    <p>Servicing your engine on time is key to a healthy car.  Get your trusted oil services with us.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/oilservice.png" width="100px" />
-                                    <h3>Wheel alignment</h3>
-                                    <p>A wheel alignment will reduce tire wear, fuel consumption and ensure you having a smoother journey </p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/carpainting.png" width="100px" />
-                                    <h3>Tinkering & Painting</h3>
-                                    <p>We are sure that you will Comment on your car just like a WOW with our sculpture with our work.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/enginescanning.png" width="100px" />
-                                    <h3>Engine Scanning</h3>
-                                    <p>We must need a Healthy Enginee for our Car to have a Safty and riskless journey.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/bodyshining.png" width="100px" />
-                                    <h3>Body Shining</h3>
-                                    <p>Get a classy and shining outfit for your car with us at the most affordable price.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/airconditioning.png" width="100px" />
-                                    <h3>Air Conditioning</h3>
-                                    <p>Make you're every ride positive with the cool breeze and in a relaxed mindset.</p>
-                                </div>
-                            </div>
-                            <div class="col-lg-3 col-md-6">
-                                <div class="service-item">
-                                    <img src="/img/interiorcleaning.png" width="100px" />
-                                    <h3>Interior Cleaning</h3>
-                                    <p>Make your car cleanest. finest and more comfortable with our interior cleaning services.</p>
+                                    <ul>
+                                        <li><i class="far fa-check-circle"></i>Car Washing</li>
+                                        <li><i class="far fa-check-circle"></i>Oil Service</li>
+                                        <li><i class="far fa-check-circle"></i>Wheel Alignment</li>
+                                        <li><i class="far fa-check-circle"></i>Tinkering & Painting</li>
+                                        <li><i class="far fa-check-circle"></i>Interior Cleaning</li>
+                                        <li><i class="far fa-check-circle"></i>Engine Scanning</li>
+                                        <li><i class="far fa-check-circle"></i>Body Shining</li>
+                                        <li><i class="far fa-check-circle"></i>Air Conditioning</li>
+                                    </ul>
+                                    <a class="btn btn-custom" href="#contact">Learn More</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!-- Service End -->
-
-        <!-- About Start -->
-        <div class="about" id="about">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6">
-                        <div class="about-img">
-                            <img src="img/aboutus.jpg" alt="Image">
-                        </div>
+                <!-- About End -->
+            <!-- Service Start -->
+            <div class="service" id="service">
+                <div class="container">
+                    <div class="section-header text-center">
+                        <p>What We Do?</p>
+                        <h2>Premium Car Services</h2>
                     </div>
-                    <div class="col-lg-6">
-                        <div class="section-header text-left">
-                            <p>About Us</p>
-                            <h2>MD Care Care</h2>
+                    <div class="row">
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/carwashing.png" width="100px" />
+                                <h3>Car washing</h3>
+                                <p>We clean your car so well you'll need sunglasses to see your car shine as newer one
+                                </p>
+                            </div>
                         </div>
-                        <div class="about-content">
-                            <p>
-                                The Best Car Repair, and Service Center at Kavundampalayam, Coimbatore, where we aim to empower our best services to our lovely customers for a steady, stunning, and safe trip.
-                            </p>
-                            <ul>
-                                <li><i class="far fa-check-circle"></i>Car Washing</li>
-                                <li><i class="far fa-check-circle"></i>Oil Service</li>
-                                <li><i class="far fa-check-circle"></i>Wheel Alignment</li>
-                                <li><i class="far fa-check-circle"></i>Tinkering & Painting</li>
-                                <li><i class="far fa-check-circle"></i>Interior Cleaning</li>
-                                <li><i class="far fa-check-circle"></i>Engine Scanning</li>
-                                <li><i class="far fa-check-circle"></i>Body Shining</li>
-                                <li><i class="far fa-check-circle"></i>Air Conditioning</li>
-                            </ul>
-                            <a class="btn btn-custom" href="">Learn More</a>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/oilservice.png" width="100px" />
+                                <h3>Oil Service</h3>
+                                <p>Servicing your engine on time is key to a healthy car.  Get your trusted oil services with us.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/oilservice.png" width="100px" />
+                                <h3>Wheel alignment</h3>
+                                <p>A wheel alignment will reduce tire wear, fuel consumption and ensure you having a smoother journey </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/carpainting.png" width="100px" />
+                                <h3>Tinkering & Painting</h3>
+                                <p>We are sure that you will Comment on your car just like a WOW with our sculpture with our work.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/enginescanning.png" width="100px" />
+                                <h3>Engine Scanning</h3>
+                                <p>We must need a Healthy Enginee for our Car to have a Safty and riskless journey.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/bodyshining.png" width="100px" />
+                                <h3>Body Shining</h3>
+                                <p>Get a classy and shining outfit for your car with us at the most affordable price.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/airconditioning.png" width="100px" />
+                                <h3>Air Conditioning</h3>
+                                <p>Make you're every ride positive with the cool breeze and in a relaxed mindset.</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6">
+                            <div class="service-item">
+                                <img src="/img/interiorcleaning.png" width="100px" />
+                                <h3>Interior Cleaning</h3>
+                                <p>Make your car cleanest. finest and more comfortable with our interior cleaning services.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- About End -->
+            <!-- Service End -->
+
 
         <!-------Why Choose Us-------------->
 
@@ -399,7 +398,7 @@
             <div class="container">
                 <div class="section-header text-center">
                     <p>Get In Touch</p>
-                    <h2>Contact for any query</h2>
+                    <h2>Contact Us to get more details</h2>
                 </div>
                 <div class="row">
                     <div class="col-md-4">
@@ -420,7 +419,8 @@
                                 </div>
                                 <div class="contact-info-text">
                                     <h3>Call Us</h3>
-                                    <p>+91 96290 52227</p>
+                                    <p>+91 9629152227</p>
+                                    <p>+91 9629752227</p>
                                 </div>
                             </div>
                             <div class="contact-info-item">
@@ -428,7 +428,7 @@
                                     <i class="far fa-envelope"></i>
                                 </div>
                                 <div class="contact-info-text">
-                                    <h3>Email Us</h3>
+                                    <h3>Mail Us</h3>
                                     <p>mdcarcare.in@gmail.com</p>
                                 </div>
                             </div>
@@ -518,7 +518,7 @@
                 </div>
             </div>
             <div class="container copyright">
-                <p>&copy; <a href="#">MD Car Care</a>, All Right Reserved. Designed By <a href="https://primespot.tech">Primespot Technologies</a></p>
+                <p>&copy; <a href="#"> MD Car Care</a> , All Right Reserved. Designed By <a href="https://primespot.tech"> Primespot Technologies</a></p>
             </div>
         </div>
         <!-- Footer End -->
