--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="top-bar-text">
                                         <h3>Opening Hour</h3>
-                                        <p>Mon - Fri, 8:00 - 9:00</p>
+                                        <p>Mon - Sat, 9:00AM - 6:30PM</p>
                                     </div>
                                 </div>
                             </div>
@@ -171,18 +171,14 @@
                                 </div>
                                 <div class="about-content">
                                     <p>
-                                        The Best Car Repair, and Service Center at Kavundampalayam, Coimbatore, where we aim to empower our best services to our lovely customers for a steady, stunning, and safe trip.
+                                        MD Car Care, the Best Car Repair and Service Center at Kavundampalayam, Coimbatore. 
+                                        We aim to empower our services to our lovely customers for a steady, stunning, and safe trip. 
+                                        We provide TOP NOTCH Services to all kinds of branded Cars at reasonable prices. 
+                                        We offer a full range of services to vehicle owners in Coimbatore. 
+                                        Our professionals know how to handle a wide range of car services. 
+                                        Whether you drive a passenger car or medium-sized truck or SUV, our mechanics strive to ensure that your vehicle will be performing at its best before leaving our car shop. 
+                                        Whether you drive a medium-sized truck or passenger car or SUV, our mechanics strive to ensure.
                                     </p>
-                                    <ul>
-                                        <li><i class="far fa-check-circle"></i>Car Washing</li>
-                                        <li><i class="far fa-check-circle"></i>Oil Service</li>
-                                        <li><i class="far fa-check-circle"></i>Wheel Alignment</li>
-                                        <li><i class="far fa-check-circle"></i>Tinkering & Painting</li>
-                                        <li><i class="far fa-check-circle"></i>Interior Cleaning</li>
-                                        <li><i class="far fa-check-circle"></i>Engine Scanning</li>
-                                        <li><i class="far fa-check-circle"></i>Body Shining</li>
-                                        <li><i class="far fa-check-circle"></i>Air Conditioning</li>
-                                    </ul>
                                     <a class="btn btn-custom" href="#contact">Learn More</a>
                                 </div>
                             </div>
@@ -317,7 +313,14 @@
                             </div>
                             <div id="collapseOne" class="panel-collapse collapse in">
                                 <div class="panel-body">
-                                    <p>MD Car Care is a Multi Brand Car Care Services in Coimbatore where you can service your buddy at the best price with quality of Services.</p>
+                                    <ul>
+                                        <li>We make auto repair and maintenance more convenient for you</li>
+                                        <li>We are a friendly, helpful, and professional group of people</li>
+                                        <li>Our professionals know how to handle a wide range of car services</li>
+                                        <li>We get the job done right — the first time</li>
+                                        <li>Same day service for most repairs and maintenance</li>
+                                    </ul>
+
                                 </div>
                             </div>
                         </div>
@@ -326,12 +329,12 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">What will be the Time for Delivery?</a>
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">What will be the time for Delivery of the Vehicles? </a>
                                 </h4>
                             </div>
                             <div id="collapseTwo" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>We deliver your car in a short period of 4 to 5 hours. If any additional repairs/replacements and paintings are involved, the time taken may vary according to the services.</p>
+                                    <p>We deliver your car in a short period of 4 to 5 hours. If any additional repairs/replacements and paintings are involved, the time taken may vary according to the services</p>
                                 </div>
                             </div>
                         </div>
@@ -340,12 +343,12 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h4 class="panel-title">
-                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Do we offer any warranty for the Car Service?</a>
+                                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree">Do we offer a warranty for the services we offer?</a>
                                 </h4>
                             </div>
                             <div id="collapseThree" class="panel-collapse collapse">
                                 <div class="panel-body">
-                                    <p>Yes, we give you one month warranty of the Service that we have provided for your car. </p>
+                                    <p>Yes, of course, we will give you a one month warranty for every service that we provide to your car. If anything happens in the one-month period you can directly contact us either by call or What's App at 96291 52227...</p>
                                 </div>
                             </div>
                         </div>
