--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
         <!-- Favicon -->
-        <link href="img/favicon.ico" rel="icon">
+        <!-- <link href="img/favicon.ico" rel="icon"> -->
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"> 
@@ -26,6 +26,7 @@
         <link href="lib/animate/animate.min.css" rel="stylesheet">
         <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
         <link href="css/YTPlayer.css" rel="stylesheet" />
+        <link rel="icon" href="/img/logo.png" type="image/icon type">
         <!-- Template Stylesheet -->
         <link href="css/style.css" rel="stylesheet">
     </head>
@@ -155,107 +156,107 @@
             </div>
         </div>
         <!-- Carousel End -->
-                <!-- About Start -->
-                <div class="about" id="about">
-                    <div class="container">
-                        <div class="row align-items-center">
-                            <div class="col-lg-6">
-                                <div class="about-img">
-                                    <img src="img/aboutus.jpg" alt="Image">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="section-header text-left">
-                                    <p>About Us</p>
-                                    <h2>MD Care Care</h2>
-                                </div>
-                                <div class="about-content">
-                                    <p>
-                                        MD Car Care, the Best Car Repair and Service Center at Kavundampalayam, Coimbatore. 
-                                        We aim to empower our services to our lovely customers for a steady, stunning, and safe trip. 
-                                        We provide TOP NOTCH Services to all kinds of branded Cars at reasonable prices. 
-                                        We offer a full range of services to vehicle owners in Coimbatore. 
-                                        Our professionals know how to handle a wide range of car services. 
-                                        Whether you drive a passenger car or medium-sized truck or SUV, our mechanics strive to ensure that your vehicle will be performing at its best before leaving our car shop. 
-                                        Whether you drive a medium-sized truck or passenger car or SUV, our mechanics strive to ensure.
-                                    </p>
-                                    <a class="btn btn-custom" href="#contact">Learn More</a>
-                                </div>
-                            </div>
+        <!-- About Start -->
+        <div class="about" id="about">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <div class="about-img">
+                            <img src="img/contact.jpg" alt="Image">
                         </div>
                     </div>
-                </div>
-                <!-- About End -->
-            <!-- Service Start -->
-            <div class="service" id="service">
-                <div class="container">
-                    <div class="section-header text-center">
-                        <p>What We Do?</p>
-                        <h2>Premium Car Services</h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/carwashing.png" width="100px" />
-                                <h3>Car washing</h3>
-                                <p>We clean your car so well you'll need sunglasses to see your car shine as newer one
-                                </p>
-                            </div>
+                    <div class="col-lg-6">
+                        <div class="section-header text-left">
+                            <p>About Us</p>
+                            <h2>MD Care Care</h2>
                         </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/oilservice.png" width="100px" />
-                                <h3>Oil Service</h3>
-                                <p>Servicing your engine on time is key to a healthy car.  Get your trusted oil services with us.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/oilservice.png" width="100px" />
-                                <h3>Wheel alignment</h3>
-                                <p>A wheel alignment will reduce tire wear, fuel consumption and ensure you having a smoother journey </p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/carpainting.png" width="100px" />
-                                <h3>Tinkering & Painting</h3>
-                                <p>We are sure that you will Comment on your car just like a WOW with our sculpture with our work.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/enginescanning.png" width="100px" />
-                                <h3>Engine Scanning</h3>
-                                <p>We must need a Healthy Enginee for our Car to have a Safty and riskless journey.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/bodyshining.png" width="100px" />
-                                <h3>Body Shining</h3>
-                                <p>Get a classy and shining outfit for your car with us at the most affordable price.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/airconditioning.png" width="100px" />
-                                <h3>Air Conditioning</h3>
-                                <p>Make you're every ride positive with the cool breeze and in a relaxed mindset.</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item">
-                                <img src="/img/interiorcleaning.png" width="100px" />
-                                <h3>Interior Cleaning</h3>
-                                <p>Make your car cleanest. finest and more comfortable with our interior cleaning services.</p>
-                            </div>
+                        <div class="about-content">
+                            <p>
+                                MD Car Care, the Best Car Repair and Service Center at Kavundampalayam, Coimbatore. 
+                                We aim to empower our services to our lovely customers for a steady, stunning, and safe trip. 
+                                We provide TOP NOTCH Services to all kinds of branded Cars at reasonable prices. 
+                                We offer a full range of services to vehicle owners in Coimbatore. 
+                                Our professionals know how to handle a wide range of car services. 
+                                Whether you drive a passenger car or medium-sized truck or SUV, our mechanics strive to ensure that your vehicle will be performing at its best before leaving our car shop. 
+                                Whether you drive a medium-sized truck or passenger car or SUV, our mechanics strive to ensure.
+                            </p>
+                            <a class="btn btn-custom" href="#contact">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- Service End -->
+        </div>
+        <!-- About End -->
+        <!-- Service Start -->
+        <div class="service" id="service">
+            <div class="container">
+                <div class="section-header text-center">
+                    <p>What We Do?</p>
+                    <h2>Premium Car Services</h2>
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/carwashing.png" width="100px" />
+                            <h3>Car washing</h3>
+                            <p>We clean your car so well you'll need sunglasses to see your car shine as newer one
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/oilservice.png" width="100px" />
+                            <h3>Oil Service</h3>
+                            <p>Servicing your engine on time is key to a healthy car.  Get your trusted oil services with us.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/wheelalignment.png" width="100px" />
+                            <h3>Wheel alignment</h3>
+                            <p>A wheel alignment will reduce tire wear, fuel consumption and ensure you having a smoother journey </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/carpainting.png" width="100px" />
+                            <h3>Tinkering & Painting</h3>
+                            <p>We are sure that you will Comment on your car just like a WOW with our sculpture with our work.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/enginescanning.png" width="100px" />
+                            <h3>Engine Scanning</h3>
+                            <p>We must need a Healthy Enginee for our Car to have a Safty and riskless journey.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/bodyshining.png" width="100px" />
+                            <h3>Body Shining</h3>
+                            <p>Get a classy and shining outfit for your car with us at the most affordable price.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/airconditioning.png" width="100px" />
+                            <h3>Air Conditioning</h3>
+                            <p>Make you're every ride positive with the cool breeze and in a relaxed mindset.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6">
+                        <div class="service-item">
+                            <img src="/img/interiorcleaning.png" width="100px" />
+                            <h3>Interior Cleaning</h3>
+                            <p>Make your car cleanest. finest and more comfortable with our interior cleaning services.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Service End -->
 
 
         <!-------Why Choose Us-------------->
@@ -263,7 +264,7 @@
         <div class="why-choose-us">
             <div class="container">
                 <div class="section-header text-center">
-                    <p>WHY CHOOSE US</p>
+                    <p>REASON TO CHOOSE MD CAR CARE</p>
                     <h2>Premium Car Services</h2>
                 </div>
                 <div class="row">
@@ -311,7 +312,7 @@
                                     <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne">Why MD Car Care?</a>
                                 </h4>
                             </div>
-                            <div id="collapseOne" class="panel-collapse collapse in">
+                            <div id="collapseOne" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ul>
                                         <li>We make auto repair and maintenance more convenient for you</li>
